@@ -105,9 +105,8 @@ utilise <dir> comme un disque dur emule
 .B \-\-acsi <file>
 emule un disque dur ACSI avec un fichier image <file>
 .TP
-.B \-\-slowfdc <bool>
-attenue l'emulation du FDC (requis pour que certains jeux ou demos
-fonctionnent)
+.B \-\-fastfdc <bool>
+accelere l'emulation du FDC (peut entrainer des erreurs dans certains jeux ou demos)
 .SH "Options de mémoire"
 .TP
 .B \-s, \-\-memsize <x>
