@@ -215,8 +215,8 @@ Emulate an IDE master hard disk with an image <file>
 .B \-\-ide\-slave <file>
 Emulate an IDE slave hard disk with an image <file>
 .TP 
-.B \-\-slowfdc <bool>
-slow down FDC emulation (deprecated)
+.B \-\-fastfdc <bool>
+speed up FDC emulation (can cause incompatibilities)
 .SH "Memory options"
 .TP 
 .B \-s, \-\-memsize <x>
