@@ -1177,14 +1177,14 @@ Emulate an IDE slave hard disk with an image &lt;file&gt;
 <tr valign="top" align="left">
 <td width="10%"></td>
 <td width="89%">
-<b>--slowfdc &lt;bool&gt;</b></td>
+<b>--fastfdc &lt;bool&gt;</b></td>
 </table>
 <table width="100%" border=0 rules="none" frame="void"
        cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
 <td width="21%"></td>
 <td width="77%">
-slow down FDC emulation (deprecated)
+speed up FDC emulation (can cause incompatibilities)
 </td>
 </table>
 
