@@ -4,7 +4,6 @@ nWriteProtection = 2
 szDiskAFileName =
 szDiskBFileName =
 szDiskImageDirectory = /home/user/MyDocs/.games
-bSlowFloppy = FALSE
 szDiskAZipPath =
 szDiskBZipPath =
 
