@@ -4,7 +4,6 @@ nWriteProtection = 2
 szDiskAFileName = /mnt/sd/game/hatari/FANTASIA.st
 szDiskBFileName =
 szDiskImageDirectory = /mnt/sd/game/hatari/
-bSlowFloppy = FALSE
 szDiskAZipPath =
 szDiskBZipPath =
 
